zero-schema-macros/tests/ui/fail/12_zero_sized_root.rs
use zero_schema_macros::zero;

#[zero]
struct EmptyRoot {}

fn main() {}
